hphp/test/zend/good/ext/bcmath/tests/bcpowmod.php
<?php
echo bcpowmod("5", "2", "7") . "\n";
echo bcpowmod("-2", "5", "7") . "\n";
echo bcpowmod("10", "2147483648", "2047");
?>